Feature/create region api with swagger (#2)
* feat: added region swagger api

Create app to region information
Create ENUM to city type information
Create model region
Create serializers and viewsets
Update configuration to add swagger and rest framework
Update requirements to actual frameworks and libraries
Apply migrations to region model

* feat: created api regions

Add regions viewset
Add swagger to expose regions
Add redis to caching 60 seconds of the requests to the postgres db
Add Postgres and make migrates
Add JWT to authorize requests
Add DockerFile and docker-compose

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 Django
+djangorestframework
+djangorestframework-simplejwt
+drf-spectacular
+drf-spectacular-sidecar
 psycopg2
 redis
-djangorestframework-jwt
-django-rest-swagger
